--- a/myportfolio/portfolio/templates/portfolio/base.html
+++ b/myportfolio/portfolio/templates/portfolio/base.html
@@ -1,60 +1,63 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio Website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <link rel="stylesheet" href="{% static 'style/main.css' %}" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Code+Pro&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <!-- Header -->
-    <header>
-      <div class="container">
-        <a href="{% url 'home' %}"><h1>Abdullah's Folio</h1></a>
-        <nav>
-          <ul>
-            <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'about' %}">About</a></li>
-            <li><a href="{% url 'projects' %}">Projects</a></li>
-            <li><a href="{% url 'contact' %}">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <!-- Font awesome cdn  font icon css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+</head>
+<body>
+    <div class="hero-header">
+        <div class="wrapper">
+            <header>
+                <div class="logo">
+                    <i class="fa-solid fa-a"></i>
+                    <div class="logo-text">Abdullah Tahir</div>
+                </div>
+                <nav>
+                    <div class="togglebtn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <ul class="navlinks">
+                        <li><a href="{% url 'home' %}">Home</a></li>
+                        <li><a href="{% url 'projects' %}">My work</a></li>
+                        <li><a href="{% url 'resume' %}">Resume</a></li>
+                        <li><a href="{% url 'contact' %}">Contact</a></li>
+                    </ul>
+                </nav>
+            </header>
 
-    <!-- Main Content -->
-    <main class="container">{% block content %} {% endblock %}</main>
-
-    <!-- Footer -->
+            <main>
+                {% block content %}
+                {% endblock content %}
+            </main>
+        </div>
+    </div>
+    <div class="projects-decoration"></div>
     <footer>
-      <p>&copy; 2025 Abdullah Tahir. All Rights Reserved.</p>
-      <div class="social-links">
-        <a
-          href="https://github.com/AbdullahbinTahir42"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="fab fa-github"></i>
-        </a>
-        <a
-          href="https://www.linkedin.com/in/abdullah-tahir-23ntucs1004/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <i class="fab fa-linkedin"></i>
-        </a>
-      </div>
+        <div class="hero-text">
+            <div class="social">
+                <p>© 2025 Abdullah Tahir. All rights reserved.</p>
+                <div class="social-icons">
+                    <a href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/abdullah-tahir-23ntucs1004/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://github.com/AbdullahbinTahir42" target="_blank"><i class="fa-brands fa-github"></i></a>
+                </div>
+            </div>
+        </div>
     </footer>
 
+    <!-- Typed js for typing text effect -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="{% static 'js/main.js' %}"></script>
-  </body>
+</body>
 </html>
