--- a/myportfolio/portfolio/templates/portfolio/home.html
+++ b/myportfolio/portfolio/templates/portfolio/home.html
@@ -2,7 +2,7 @@
 
 <div class="container">
 <div class="hero-pic">
-   <img src="{% static 'images/my.jpg' %}" alt="profile pic">
+   <img src="{% static 'images/my.JPG' %}" alt="profile pic">
 </div>
 
  
