--- a/myportfolio/portfolio/templates/portfolio/base.html
+++ b/myportfolio/portfolio/templates/portfolio/base.html
@@ -1,64 +1,81 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Website</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
+    <!-- Font Awesome CDN for icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
+
+    <!-- Main CSS -->
     <link rel="stylesheet" href="{% static 'style/main.css' %}" />
-    <!-- Font awesome cdn  font icon css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-</head>
-<body>
-    <div class="hero-header">
-        <div class="wrapper">
-            <header>
-                <div class="logo">
-                    <i class="fa-solid fa-a"></i>
-                    <div class="logo-text">Abdullah Tahir</div>
-                </div>
-                <nav>
-                    <div class="togglebtn">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <ul class="navlinks">
-                        <li><a href="{% url 'home' %}">Home</a></li>
-                        <li><a href="{% url 'projects' %}">My work</a></li>
-                        <li><a href="{% url 'resume' %}">Resume</a></li>
-                        <li><a href="{% url 'contact' %}">Contact</a></li>
-                    </ul>
-                </nav>
-            </header>
+  </head>
 
-            <main>
-                
-                {% block content %}
-                {% endblock content %}
-            </main>
-        </div>
-    </div>
+  <body>
+    <header class="site-header">
+      <div class="header-container">
+        <a href="{% url 'home' %}" class="brand">
+          <i class="fa-solid fa-a"></i>
+          <span class="brand-name">Abdullah Tahir</span>
+        </a>
+    
+        <nav class="main-nav">
+          <button class="nav-toggle" aria-label="Toggle menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <ul class="nav-links">
+            <li><a href="{% url 'home' %}">Home</a></li>
+            <li><a href="{% url 'projects' %}">My work</a></li>
+            <li><a href="{% url 'resume' %}">Resume</a></li>
+            <li><a href="{% url 'contact' %}">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    
+    
+    <main>{% block content %} {% endblock content %}</main>
+
     <div class="projects-decoration"></div>
+
     <footer>
-        <div class="hero-text">
-            <div class="social">
-                <p>© 2025 Abdullah Tahir. All rights reserved.</p>
-                <div class="social-icons">
-                    <a href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.linkedin.com/in/abdullah-tahir-23ntucs1004/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://github.com/AbdullahbinTahir42" target="_blank"><i class="fa-brands fa-github"></i></a>
-                </div>
-            </div>
+      <div class="hero-text">
+        <div class="social">
+          <p>© 2025 Abdullah Tahir. All rights reserved.</p>
+          <div class="social-icons">
+            <a href="#" target="_blank"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/abdullah-tahir-23ntucs1004/"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+            <a href="#" target="_blank"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="https://github.com/AbdullahbinTahir42" target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+          </div>
         </div>
+      </div>
     </footer>
 
-    <!-- Typed js for typing text effect -->
+    <!-- Typed.js for typing text effect -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
     <script src="{% static 'js/main.js' %}"></script>
-</body>
+  </body>
 </html>
